# agent

./: .env.example  .eslintrc.json  .gitignore  .pgmrc.json  AGENTS.md  AGENT_BUILD_SPEC.md  CLAUDE.md  Dockerfile  Makefile  NEXT_TASK.md  QUICKSTART.md  QUICK_START_GUIDE.md  README.md  SETUP.md  TODO.md  VOICE_SETUP.md  docker-compose.yml  frontend-design-skill-generalized.md  frontend-design-skill-generalized.md:Zone.Identifier  package-lock.json  package.json  playwright.config.ts  pyproject.toml  setup-desktop.bat  setup.sh  tsconfig.json  vitest.config.ts
desktop-agent/: package-lock.json  package.json  tsconfig.json
desktop-agent/src/: main.ts  preload.ts
docs/: quickstart-anthropic.md
migrations/: 001_initial_schema.sql  1768796218558_initial-schema.mjs  1768799272549_memories-table.js  1768801165023_patterns-and-logs.mjs  1768848330000_context-items.js  1768848330000_context-items.mjs  1768848400000_sms-messages.js  1768848400000_sms-messages.mjs  1768848500000_voice-tables.mjs  1768848600000_api-costs.js  1768848600000_api-costs.mjs  1769000000000_add-events-table.cjs  1769000000000_add-events-table.mjs  1769100000000_add-reminders-table.js  1769100000000_add-reminders-table.mjs  1769200000000_add-goals-table.js  1769200000000_add-goals-table.mjs  1769300000000_add-health-tables.js  1769300000000_add-health-tables.mjs  1769400000000_add-user-settings-table.mjs  1769500000000_add-user-api-keys-table.js  1769500000000_add-user-api-keys-table.mjs  1769600000000_update-settings-schema.js  1769700000000_add-llm-model-setting.cjs  1769800000000_add-adaptive-settings.cjs  1769900000000_make-user-phone-number-nullable.mjs  1770000000000_add-voice-calls-table.mjs  1770000000001_add-notification-settings.mjs  README.md
notes/: notes.md
public/: cost-dashboard.html
scripts/: qwen3_tts.py  test_connectivity.py
src/: app.ts  index.ts
src/config/: index.ts
src/database/: connection.ts  index.ts  redis.ts
src/integrations/: twilio.ts
src/memory/: ai-memory.ts  cache.py  database.py  index.ts  repository.ts  types.ts
src/scripts/: reset-db.ts  verify-calendar.ts  verify-checkins.ts  verify-goals.ts  verify-health.ts  verify-llm.ts  verify-reminders.ts  verify-settings-update.ts  verify-tools.ts
src/security/: audit.ts  encryption.ts  index.ts  tls.test.ts  tls.ts
src/services/: assistant.ts  autonomous-agent.ts  billing.ts  calendar.ts  checkin-scheduler.ts  checkin.ts  context.ts  conversation.ts  cost.ts  goal.ts  llm.ts  memory.ts  message-processor.ts  pattern.ts  reminder-scheduler.ts  reminder.ts  settings.ts  sms-queue.ts  sms.ts  socket.ts  userProfile.ts  verification.ts  voice-alarm.ts  voice.ts
src/types/: calendar.ts  context.ts  cost.ts  (+14 more)
web/: index.html  package-lock.json  package.json
(+69 files in other folders)
