[project]
name = "autonomous-assistant"
version = "0.1.0"
description = "Production-ready autonomous personal assistant with intelligent routing and memory management"
authors = [
    {name = "Dylan MacDonald", email = "user@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Database
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.12.0",
    "sqlalchemy>=2.0.23",

    # Redis
    "redis[hiredis]>=5.0.0",

    # AI/ML
    "anthropic>=0.8.0",
    "openai>=1.6.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",

    # Integrations
    "twilio>=8.10.0",
    "discord.py>=2.3.0",
    "gitpython>=3.1.40",

    # Security
    "presidio-analyzer>=2.2.33",
    "presidio-anonymizer>=2.2.33",
    "python-dotenv>=1.0.0",
    "cryptography>=41.0.0",

    # Monitoring
    "sentry-sdk[fastapi]>=1.38.0",
    "prometheus-client>=0.19.0",

    # S3/Backups
    "boto3>=1.29.0",

    # Utilities
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-v",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
